# local-linear-lvm-xp

./: .gitignore  Joaquin_W_Hogg.ipynb  README.md  config.yml  setup.cfg  setup.py
ipynb/: Joaquin_W_Hogg.ipynb
notebooks/: 1-Assemble-data.ipynb  2-Neighborhoods-PCA.ipynb  Assemble-data.ipynb  Hyperpars.ipynb  Joaquin_W_Hogg.ipynb  LLVM_Hogg.ipynb  Linear-LVM-neighborhoods.ipynb  Linear-LVM-real-data.ipynb  Prototype-LLVM.ipynb  Prototype-joaquin-hogg.ipynb  Prototype-joaquin.ipynb  Viz.ipynb  helpers.py
paper/: Makefile  schlum.tex
schlummernd/: __init__.py  config.py  data.py  lvm.py  plot.py
schlummernd/tests/: test_data.py
scripts/: hyperpar-tuning.py
