[metadata]
name = schlummernd
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description =
long_description = file: README.md
license = MIT
license_file = LICENSE
python_requires = ">=3.9"

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.21
    astropy>=5
    jax
    jaxlib
python_requires = >=3.9
setup_requires =
    setuptools_scm
    extension-helpers
    wheel


[flake8]
max-line-length = 100
ignore =
    E203
    E226
    E402
    E741
    W503
    W504
