[metadata]
name = schlummernd
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description =
long_description = file: README.md
license = MIT
license_file = LICENSE
python_requires = ">=3.9"

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.21
    astropy>=5
    gala
    jax
    jaxlib
    jaxopt
    optax
    pydantic
    schwimmbad
    scipy
    h5py
    tqdm
    threadpoolctl
python_requires = >=3.9
setup_requires =
    setuptools_scm
    extension-helpers
    wheel


[flake8]
max-line-length = 88
ignore =
    E203
    E226
    E402
    E741
    W503
    W504

[yapf]
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
COALESCE_BRACKETS = true
COLUMN_LIMIT = 88
DEDENT_CLOSING_BRACKETS = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = true
SPACES_BEFORE_COMMENT = 2
